--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,7 +12,14 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 16
-      - run: npm ci
+      - run: |
+          if [ -e yarn.lock ]; then
+            yarn install --frozen-lockfile
+          elif [ -e package-lock.json ]; then
+            npm ci
+          else
+            npm i
+          fi
       - run: npm run build
       - run: npm test
 
