LTLC-112825 Use rimraf with npx

--- a/package.json
+++ b/package.json
@@ -44,26 +44,26 @@
     "tip13": "version update: generator-cli version in openapitools.json: https://github.com/OpenAPITools/openapi-generator/releases",
     "tip14": "DON'T PUBLISH from public-packages/extensibility, but from public-packages/extensibility/dist",
     "tscv": "tsc -v",
-    "tsc-build-not-used": "rimraf dist/lib && npm run tsc",
+    "tsc-build-not-used": "npx rimraf dist/lib && npm run tsc",
     "preversion": "git fetch --tags -f",
     "postversion": "git push --tags && npm run build && npm publish && git push origin HEAD:main && echo \"Successfully released version $npm_package_version!\"",
     "version-minor": "npm version --minor",
     "version-patch": "npm version --patch",
-    "build-prod": "rimraf dist/lib && webpack --config webpack.prod.js --progress",
-    "build-dev": "rimraf dist/lib && webpack --config webpack.dev.js --progress",
-    "clean-install": "rimraf node_modules && rimraf package-lock.json && rimraf package-lock.json && npm install",
+    "build-prod": "npx rimraf dist/lib && webpack --config webpack.prod.js --progress",
+    "build-dev": "npx rimraf dist/lib && webpack --config webpack.dev.js --progress",
+    "clean-install": "npx rimraf node_modules && npx rimraf package-lock.json && npm install",
     "validate": "openapi-generator-cli validate -i https://stoplight.io/api/v1/projects/sdl-language-tech/lcpublicapi/nodes/reference/Public-API.v1.json",
-    "generate": "rimraf src/lc-public-api && openapi-generator-cli generate --generator-key=lc-public-api",
-    "get-generator-templates": "rimraf templates && openapi-generator-cli author template -o templates -g typescript-fetch",
-    "generate-with-templates": "rimraf src/generatedlc-public-api && openapi-generator-cli generate --generator-key=lc-public-api-with-templates",
+    "generate": "npx rimraf src/lc-public-api && openapi-generator-cli generate --generator-key=lc-public-api",
+    "get-generator-templates": "npx rimraf templates && openapi-generator-cli author template -o templates -g typescript-fetch",
+    "generate-with-templates": "npx rimraf src/generatedlc-public-api && openapi-generator-cli generate --generator-key=lc-public-api-with-templates",
     "removeErrorResponseImportFromApis": "node remove-error-response-import-from-apis",
     "todo-ts-nocheck": "investigate ts errors in browser on projects/task-inbox hot reload, and remove ts-nocheck statement added in api files handling Blobs",
     "add-ts-nocheck": "@powershell -NoProfile -ExecutionPolicy Unrestricted -Command ./add-ts-nocheck.ps1 -path ./src/lc-public-api",
     "todo": "remove local Public-API-v1.json, 3.0.1 generator in openapitools.json and 3.0.1 scripts in package.json when openapitools supports OpenApi v3.1.0",
     "validate-3.0.1": "openapi-generator-cli validate -i Public-API.v1.json",
     "config-help": "openapi-generator-cli config-help -g typescript-fetch",
-    "generate-3.0.1": "rimraf src/lc-public-api && openapi-generator-cli generate --generator-key=lc-public-api-3.0.1 && npm run removeErrorResponseImportFromApis",
-    "generate-3.0.1-withStringEnums": "rimraf src/lc-public-api && openapi-generator-cli generate --generator-key=lc-public-api-3.0.1-withStringEnums && npm run removeErrorResponseImportFromApis",
+    "generate-3.0.1": "npx rimraf src/lc-public-api && openapi-generator-cli generate --generator-key=lc-public-api-3.0.1 && npm run removeErrorResponseImportFromApis",
+    "generate-3.0.1-withStringEnums": "npx rimraf src/lc-public-api && openapi-generator-cli generate --generator-key=lc-public-api-3.0.1-withStringEnums && npm run removeErrorResponseImportFromApis",
     "generate-docs": "typedoc",
     "test": "exit 0",
     "build": "npm run clean-install && npm run generate-3.0.1-withStringEnums && npm run build-prod",
