--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 16
+          java-version: 8
       - run: npm ci
       - run: npm run build
       - run: npm test
