--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -9,11 +9,13 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: "adopt-hotspot"
+          java-version: "8"
       - uses: actions/setup-node@v4
         with:
           node-version: 16
-          java-version: 8
-      - run: npm ci
       - run: npm run build
       - run: npm test
 
