--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: windows-latest
     permissions:
       packages: write
-      contents: read|write
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
