--- a/package.json
+++ b/package.json
@@ -42,15 +42,8 @@
     "tip11": "openapi specs url: https://stoplight.io/api/v1/projects/sdl-language-tech/lcpublicapi/nodes/reference/Public-API.v1.json; see also https://dev.azure.com/sdl/Stoplight/_git/LCPublicAPI?path=/reference/Public-API.v1.json",
     "tip12": "version update: @openapitools/openapi-generator-cli devDependency version: https://www.npmjs.com/package/@openapitools/openapi-generator-cli",
     "tip13": "version update: generator-cli version in openapitools.json: https://github.com/OpenAPITools/openapi-generator/releases",
-    "tip14": "DON'T PUBLISH from public-packages/extensibility, but from public-packages/extensibility/dist",
-    "tscv": "tsc -v",
-    "tsc-build-not-used": "npx rimraf dist && npm run tsc",
-    "preversion": "git fetch --tags -f",
-    "postversion": "git push --tags && npm publish && git push origin HEAD:main",
-    "version-minor": "npm version --minor",
-    "version-patch": "npm version --patch",
-    "build-prod": "npx rimraf dist && webpack --config webpack.prod.js --progress",
-    "build-dev": "npx rimraf dist && webpack --config webpack.dev.js --progress",
+    "build-prod-js": "npx rimraf dist && webpack --config webpack.prod.js --progress",
+    "build-dev-js": "npx rimraf dist && webpack --config webpack.dev.js --progress",
     "clean-install": "npx rimraf node_modules && npx rimraf package-lock.json && npm install",
     "validate": "openapi-generator-cli validate -i https://stoplight.io/api/v1/projects/sdl-language-tech/lcpublicapi/nodes/reference/Public-API.v1.json",
     "generate": "npx rimraf src/lc-public-api && openapi-generator-cli generate --generator-key=lc-public-api",
@@ -66,9 +59,8 @@
     "generate-3.0.1-withStringEnums": "npx rimraf src/lc-public-api && openapi-generator-cli generate --generator-key=lc-public-api-3.0.1-withStringEnums && npm run removeErrorResponseImportFromApis",
     "generate-docs": "typedoc",
     "test": "exit 0",
-    "build": "npm run generate-3.0.1-withStringEnums && npm run build-prod",
-    "publish": "npm run preversion && npm run version-patch && npm run postversion",
-    "publish-dry-run": "npm publish --dry-run"
+    "build": "npm run generate-3.0.1-withStringEnums && npm run build-prod-js",
+    "build-dev": "npm run generate-3.0.1-withStringEnums && npm run build-dev-js"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "2.13.1",
