--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -3,7 +3,7 @@ name: Bump version
 on:
   workflow_dispatch:
     inputs:
-      version:
+      newVersionType:
         description: "New version type"
         required: true
         # default: "patch"
@@ -31,6 +31,21 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
       - name: Bump version
-        run: npm version ${{ github.event.inputs.version }}
+        id: bump-version
+        # store new version variable, strip new line character and add to step output
+        run: |
+          new_version = $(npm version ${{ github.event.inputs.newVersionType }} -m "Bump version to %s")
+          new_version_strip = $(echo $new_version | tr -d '\n')
+          echo "NEW_VERSION = $new_version_strip" >> "$GITHUB_OUTPUT"
       - name: Push latest version
-        run: git push origin main --follow-tags
+        run: git push origin HEAD:main --follow-tags
+      - name: Run publish and release workflow
+        #run: gh workflow run publish-and-release.yml --ref ${{ steps.bump-version.outputs.NEW_VERSION }}
+        run: |
+          curl -X POST \
+            -H "Accept: application/vnd.github.v3+json" \
+            -H: "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/repos/${{github.repository}}/actions/workflows/publish-and-release.yml/dispatches \
+            -d '{"ref": "main", "inputs": {"version": "${{ steps.bump-version.outputs.NEW_VERSION }}"}}'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
