--- a/.github/workflows/publish-and-release.yml
+++ b/.github/workflows/publish-and-release.yml
@@ -1,9 +1,18 @@
 name: Publish package and create release
 
 on:
-  push:
-    tags:
-      - "v*"
+  #push:
+  #  tags:
+  #    - 'v*.*.*'
+
+  # tag pushed in bump-version workflow doesn't trigger push tags event
+  # so adding workflow_dispatch to run the publish-and-release workflow
+  # explicitly at the end of bump-version
+  workflow_dispatch:
+    inputs:
+      version:
+        description: "Version to publish and release"
+        required: true
 
 jobs:
   publish-npm-package-to-github:
@@ -42,6 +51,6 @@ jobs:
       - name: Check out source
         uses: actions/checkout@v4
       - name: Create release
-        run: gh release create ${{ github.ref }} --generate-notes
+        run: gh release create ${{ inputs.version }} --generate-notes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
