--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -39,10 +39,18 @@ jobs:
       - name: Run publish and release workflow
         #run: gh workflow run publish-and-release.yml --ref ${{ steps.bump-version.outputs.NEW_VERSION }}
         run: |
-          curl -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            -H: "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/${{github.repository}}/actions/workflows/publish-and-release.yml/dispatches \
-            -d '{"ref": "main", "inputs": {"version": "${{ steps.bump-version.outputs.NEW_VERSION }}"}}'
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/repos/${{github.repository_owner}}/${{github.repository}}/actions/workflows/publish-and-release.yml/dispatches \
+            -d '{"ref":"main","inputs":{"version":"${{ steps.bump-version.outputs.NEW_VERSION }}"}}'
+        # -H "X-GitHub-Api-Version: 2022-11-28" \
+        #run: |
+        #  curl -X POST \
+        #    -H "Accept: application/vnd.github+json" \
+        #    -H: "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+        #    https://api.github.com/repos/${{github.repository}}/actions/workflows/publish-and-release.yml/dispatches \
+        #    -d '{"ref": "main", "inputs": {"version": "${{ steps.bump-version.outputs.NEW_VERSION }}"}}'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
