--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -37,7 +37,10 @@ jobs:
       - name: Push latest version
         run: git push origin HEAD:main --follow-tags
       - name: Run publish and release workflow
-        run: gh workflow run publish-and-release.yml --ref main -f version=${{ steps.bump-version.outputs.NEW_VERSION }}
+        env:
+          NEW_VERSION: ${{ steps.bump-version.outputs.NEW_VERSION }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh workflow run publish-and-release.yml --ref main -f version=$NEW_VERSION
         #run: |
         #  curl -L \
         #    -X POST \
@@ -53,5 +56,3 @@ jobs:
         #    -H: "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
         #    https://api.github.com/repos/${{github.repository}}/actions/workflows/publish-and-release.yml/dispatches \
         #    -d '{"ref": "main", "inputs": {"version": "${{ steps.bump-version.outputs.NEW_VERSION }}"}}'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
