LTLC-113501 Update wokflow

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -34,7 +34,7 @@ jobs:
         id: bump-version
         # store new version variable, strip new line character and add to step output
         #run: echo "NEW_VERSION = $(echo $(npm version ${{ github.event.inputs.newVersionType }} -m "Bump version to %s") | tr -d '\n')" >> "$GITHUB_OUTPUT"
-        run: echo "NEW_VERSION=$(npm version ${{ github.event.inputs.newVersionType }} -m "Bump version to %s" | tr -d '\n') >> "$GITHUB_OUTPUT"
+        run: echo "NEW_VERSION=$(npm version ${{ github.event.inputs.newVersionType }} -m "Bump version to %s" | tr -d '\n')" >> "$GITHUB_OUTPUT"
       - name: Push latest version
         run: git push origin HEAD:main --follow-tags
       - name: Run publish and release workflow
