--- a/.github/workflows/publish-and-release.yml
+++ b/.github/workflows/publish-and-release.yml
@@ -19,10 +19,13 @@ jobs:
     name: Publish npm package to GitHub Packages
     runs-on: windows-latest
     permissions:
+      contents: read
       packages: write
     steps:
       - name: Check out source
         uses: actions/checkout@v4
+        #with:
+        #  token: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
