--- a/.github/workflows/publish-and-release.yml
+++ b/.github/workflows/publish-and-release.yml
@@ -21,6 +21,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+      id-token: write # required for npm publish --provenance
     steps:
       - name: Check out source
         uses: actions/checkout@v4
