--- a/.github/workflows/publish-and-release.yml
+++ b/.github/workflows/publish-and-release.yml
@@ -21,7 +21,7 @@ jobs:
     permissions:
       contents: read
       packages: write
-      id-token: write # required for npm publish --provenance
+      # id-token: write # required for npm publish --provenance
     steps:
       - name: Check out source
         uses: actions/checkout@v4
@@ -41,7 +41,8 @@ jobs:
       - name: Build
         run: npm run build
       - name: Publish npm package
-        run: npm publish --provenance
+        # provenance requires id-token: write; works for public access packages only
+        run: npm publish # --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
